# priest

./: Cargo.toml
src/: lib.rs  machine.rs  main.rs
src/memory/: buffer.rs  exception.rs  mmap.rs  mod.rs
src/processor/: mod.rs
src/processor/riscv/: exception.rs  hart.rs  instruction.rs  mod.rs
src/processor/riscv/extensions/: mod.rs
src/processor/riscv/extensions/i/: add.rs  addi.rs  addiw.rs  addw.rs  and.rs  andi.rs  auipc.rs  beq.rs  bge.rs  bgeu.rs  blt.rs  bltu.rs  bne.rs  ebreak.rs  ecall.rs  fence.rs  jal.rs  jalr.rs  lb.rs  lbu.rs  ld.rs  lh.rs  lhu.rs  lui.rs  lw.rs  lwu.rs  mod.rs  or.rs  ori.rs  sb.rs  sd.rs  sh.rs  sll.rs  slli.rs  slliw.rs  sllw.rs  slt.rs  slti.rs  sltiu.rs  sltu.rs  (+13 more)
test/: Makefile  link.ld  start.S
